--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "rollup": "^2.0.0"
   },
   "dependencies": {
-    "@parcel/css": "^1.12.2",
     "@rollup/pluginutils": "^4.1.1",
+    "lightningcss": "^1.15.1",
     "source-map": "^0.7.3"
   },
   "devDependencies": {
-    "@types/node": "18.6.5",
+    "@types/node": "18.7.18",
     "@types/prettier": "2.7.0",
     "@typescript-eslint/eslint-plugin": "5.37.0",
     "@typescript-eslint/parser": "5.37.0",
