--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "test": "c8 --all --include=src --reporter=text --reporter=lcovonly uvu -r tsm test '\\.test\\.ts$'"
   },
   "peerDependencies": {
-    "rollup": "^2.0.0"
+    "rollup": "^2.0.0 | ^3.0.0"
   },
   "dependencies": {
-    "@rollup/pluginutils": "^4.1.1",
+    "@rollup/pluginutils": "^5.0.2",
     "lightningcss": "^1.15.1",
     "source-map": "^0.7.3"
   },
@@ -41,7 +41,7 @@
     "prettier": "2.7.1",
     "prettier-plugin-pkg": "0.17.1",
     "prettier-plugin-sh": "0.12.8",
-    "rollup": "2.79.1",
+    "rollup": "3.2.3",
     "tsm": "2.2.2",
     "typescript": "4.8.4",
     "uvu": "0.5.6"
