--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,28 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
-
-    "target": "ES2020",
-    "module": "CommonJS",
+    "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "skipLibCheck": true,
-    "allowJs": true,
-    "checkJs": true,
-
-    "declaration": true,
-    "sourceMap": true,
+    "allowJs": false,
 
     "strict": true,
     "allowUnreachableCode": false,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "importsNotUsedAsValues": "error",
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false, // covered by eslint
     "noImplicitOverride": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedLocals": false, // covered by eslint
+    "noUnusedParameters": false, // covered by eslint
+    "verbatimModuleSyntax": true,
+
+    "rootDir": "src",
+    "outDir": "dist",
+    "declaration": true,
+    "sourceMap": true
   },
-  "exclude": ["*.config.cjs", "**/dist", "**/node_modules", "coverage", "test"]
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
