--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "eslint": "8.38.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-unicorn": "46.0.0",
-    "prettier": "2.8.7",
+    "eslint-plugin-prettier": "4.2.1",
     "prettier-plugin-pkg": "0.17.1",
     "prettier-plugin-sh": "0.12.8",
     "rollup": "3.20.6",
