--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.8",
   "description": "Rollup plugin to combine, minify, and write to disk the CSS files in your build",
   "repository": "maxmilton/rollup-plugin-css",
-  "author": "Max Milton <max@happycode.ltd>",
+  "author": "Max Milton <max@happyhackers.xyz>",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,10 +12,9 @@
   ],
   "scripts": {
     "build": "pnpm run prebuild && tsc",
-    "dev": "tsc --watch --preserveWatchOutput",
     "lint": "pnpm run lint:js && pnpm run lint:ts",
     "lint:js": "eslint --ignore-path .gitignore --ext .cjs,.js,.mjs,.ts .",
-    "lint:ts": "tsc --project test",
+    "lint:ts": "tsc --noEmit",
     "prebuild": "rm -rf dist",
     "test": "c8 --all --include=src --reporter=text --reporter=lcovonly uvu -r tsm test '\\.test\\.ts$'"
   },
@@ -24,24 +23,25 @@
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.0.2",
-    "lightningcss": "^1.19.0",
-    "source-map": "^0.7.3"
+    "lightningcss": "^1.20.0",
+    "source-map": "^0.7.4"
   },
   "devDependencies": {
-    "@types/node": "18.15.11",
-    "@types/prettier": "2.7.2",
-    "@typescript-eslint/eslint-plugin": "5.59.0",
-    "@typescript-eslint/parser": "5.59.0",
-    "c8": "7.13.0",
-    "eslint": "8.38.0",
+    "@types/node": "20.2.5",
+    "@types/prettier": "2.7.3",
+    "@typescript-eslint/eslint-plugin": "5.59.8",
+    "@typescript-eslint/parser": "5.59.8",
+    "c8": "7.14.0",
+    "eslint": "8.42.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-unicorn": "47.0.0",
+    "prettier": "2.8.8",
     "prettier-plugin-pkg": "0.17.1",
-    "prettier-plugin-sh": "0.12.8",
-    "rollup": "3.20.6",
+    "rollup": "3.23.0",
     "tsm": "2.3.0",
     "typescript": "5.1.3",
     "uvu": "0.5.6"
