--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,40 +1,32 @@
 {
   "css.validate": false,
-  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnPaste": false,
+  "editor.formatOnSave": true,
+  "editor.formatOnType": false,
+  "eslint.lintTask.options": "--ignore-path .gitignore",
+  "files.associations": {
+    "*.xcss": "scss"
+  },
   "git.branchProtection": ["master"],
   "js/ts.implicitProjectConfig.checkJs": true,
   "prettier.ignorePath": ".gitignore",
   "scss.validate": false,
   "stylelint.validate": ["css", "scss"],
-  "[css]": {
-    "editor.formatOnSave": false,
-    "editor.codeActionsOnSave": [
-      "source.formatDocument",
-      "source.fixAll.stylelint"
-    ]
-  },
+  "typescript.tsdk": "node_modules/typescript/lib",
   "[javascript]": {
-    "editor.formatOnSave": false,
-    "editor.codeActionsOnSave": [
-      "source.sortImports",
-      "source.formatDocument",
-      "source.fixAll.eslint"
-    ]
-  },
-  "[scss]": {
-    "editor.formatOnSave": false,
-    "editor.codeActionsOnSave": [
-      "source.formatDocument",
-      "source.fixAll.stylelint"
-    ]
+    "editor.codeActionsOnSave": {
+      "source.sortImports": true,
+      "source.fixAll": true
+    }
   },
   "[typescript]": {
-    "editor.formatOnSave": false,
-    "editor.codeActionsOnSave": [
-      "source.sortImports",
-      "source.formatDocument",
-      "source.fixAll.eslint"
-    ]
+    "editor.codeActionsOnSave": {
+      "source.sortImports": true,
+      "source.fixAll": true
+    }
   }
 }
