feat: Explicitly mark package.json as type=module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@maxmilton/rollup-plugin-css",
   "version": "0.0.10",
+  "type": "module",
   "description": "Rollup plugin to combine, minify, and write to disk the CSS files in your build",
   "repository": "maxmilton/rollup-plugin-css",
   "author": "Max Milton <max@happyhackers.xyz>",
