--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,5 +3,6 @@
   "extends": [
     "github>maxmilton/renovate-config",
     "github>maxmilton/renovate-config:monthly"
-  ]
+  ],
+  "enabled": false
 }
